fixed alignment on learn and fixed up cloud_logger- for real this time

--- a/static/public/css/global.2.1.css
+++ b/static/public/css/global.2.1.css
@@ -538,7 +538,6 @@ a.button.orange{
 	width: 240px;
 	height: 180px;
 	margin: 0px;
-	margin-top: 20px;
 	float: left;
 	background: transparent url('../images/bkg_price-plan-box.1.1.png') no-repeat 0 0; 
 	background-color:yellow;
